Update final code

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+<link href="css/slick.css" rel="stylesheet" />
+<link href="css/slick-theme.css" rel="stylesheet" />
 <link href="css/bootstrap.min.css" rel="stylesheet" />
 <link href="css/main.css" rel="stylesheet" />
   </head>
@@ -42,57 +44,41 @@
     <main>
       <section aria-label="main content">
         <div class="fix-bg">
+          <h1 class="opacity-0">Page H1 Subject</h1>
         </div>
-        <div>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
+        <div class="container py-5">
+          <div class="m-auto py-lg-5 slider-content w-75 w-lg-100">
+            <div class="slider single-item">
+              <div class="position-relative">
+                <img src="img/slider1.png">
+                <div class="position-absolute top-50 start-50 translate-middle text-white fs-md-3 bg-success bg-dark bg-opacity-50 h-50 w-75 h-md-25 w-md-50 align-items-center d-flex justify-content-center">Egg</div>
+              </div>
+              <div class="position-relative">
+                <img src="img/slider2.png">
+                <div class="position-absolute top-50 start-50 translate-middle text-white fs-md-3 bg-success bg-dark bg-opacity-50 h-50 w-75 h-md-25 w-md-50 align-items-center d-flex justify-content-center">Leaves</div>
+              </div>
+              <div class="position-relative">
+                <img src="img/slider3.png">
+                <div class="position-absolute top-50 start-50 translate-middle text-white fs-md-3 bg-success bg-dark bg-opacity-50 h-50 w-75 h-md-25 w-md-50 align-items-center d-flex justify-content-center">Prawns</div>
+              </div>
+              <div class="position-relative">
+                <img src="img/slider4.png">
+                <div class="position-absolute top-50 start-50 translate-middle text-white fs-md-3 bg-success bg-dark bg-opacity-50 h-50 w-75 h-md-25 w-md-50 align-items-center d-flex justify-content-center">Lettuce</div>
+              </div>
+              <div class="position-relative">
+                <img src="img/slider5.png">
+                <div class="position-absolute top-50 start-50 translate-middle text-white fs-md-3 bg-success bg-dark bg-opacity-50 h-50 w-75 h-md-25 w-md-50 align-items-center d-flex justify-content-center">Tomatoes</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="bg-light">
+          <div class="container py-5">
+            <div class="py-lg-5">
+              <h2>News Today</h2>
+              <div class="news-today"></div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
@@ -100,14 +86,15 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <p class="py-2 px-3 m-0 text-white">
-          &copy; Copyright kenhua-l
+        <p class="py-3 m-0 text-white">
+          &copy; Copyright Bryan Wong
         </p>
       </div>
     </div>
   </div>
 </footer>
     <script src="js/jquery.min.js" type="text/javascript"></script>
+<script src="js/slick.min.js" type="text/javascript"></script>
 <script src="js/bootstrap.min.js" type="text/javascript"></script>
 <script src="js/main.js" type="text/javascript"></script>
   </body>
