--- a/src/index.html
+++ b/src/index.html
@@ -9,57 +9,41 @@
     <main>
       <section aria-label="main content">
         <div class="fix-bg">
+          <h1 class="opacity-0">Page H1 Subject</h1>
         </div>
-        <div>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
+        <div class="container py-5">
+          <div class="m-auto py-lg-5 slider-content w-75 w-lg-100">
+            <div class="slider single-item">
+              <div class="position-relative">
+                <img src="img/slider1.png">
+                <div class="position-absolute top-50 start-50 translate-middle text-white fs-md-3 bg-success bg-dark bg-opacity-50 h-50 w-75 h-md-25 w-md-50 align-items-center d-flex justify-content-center">Egg</div>
+              </div>
+              <div class="position-relative">
+                <img src="img/slider2.png">
+                <div class="position-absolute top-50 start-50 translate-middle text-white fs-md-3 bg-success bg-dark bg-opacity-50 h-50 w-75 h-md-25 w-md-50 align-items-center d-flex justify-content-center">Leaves</div>
+              </div>
+              <div class="position-relative">
+                <img src="img/slider3.png">
+                <div class="position-absolute top-50 start-50 translate-middle text-white fs-md-3 bg-success bg-dark bg-opacity-50 h-50 w-75 h-md-25 w-md-50 align-items-center d-flex justify-content-center">Prawns</div>
+              </div>
+              <div class="position-relative">
+                <img src="img/slider4.png">
+                <div class="position-absolute top-50 start-50 translate-middle text-white fs-md-3 bg-success bg-dark bg-opacity-50 h-50 w-75 h-md-25 w-md-50 align-items-center d-flex justify-content-center">Lettuce</div>
+              </div>
+              <div class="position-relative">
+                <img src="img/slider5.png">
+                <div class="position-absolute top-50 start-50 translate-middle text-white fs-md-3 bg-success bg-dark bg-opacity-50 h-50 w-75 h-md-25 w-md-50 align-items-center d-flex justify-content-center">Tomatoes</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="bg-light">
+          <div class="container py-5">
+            <div class="py-lg-5">
+              <h2>News Today</h2>
+              <div class="news-today"></div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
