Revise slider font size

--- a/src/index.html
+++ b/src/index.html
@@ -16,23 +16,23 @@
             <div class="slider single-item">
               <div class="position-relative">
                 <img src="img/slider1.png">
-                <div class="position-absolute top-50 start-50 translate-middle text-white fs-md-3 bg-success bg-dark bg-opacity-50 h-50 w-75 h-md-25 w-md-50 align-items-center d-flex justify-content-center">Egg</div>
+                <div class="position-absolute top-50 start-50 translate-middle text-white bg-success bg-dark bg-opacity-50 h-50 w-75 h-md-25 w-md-50 align-items-center d-flex justify-content-center">Egg</div>
               </div>
               <div class="position-relative">
                 <img src="img/slider2.png">
-                <div class="position-absolute top-50 start-50 translate-middle text-white fs-md-3 bg-success bg-dark bg-opacity-50 h-50 w-75 h-md-25 w-md-50 align-items-center d-flex justify-content-center">Leaves</div>
+                <div class="position-absolute top-50 start-50 translate-middle text-white bg-success bg-dark bg-opacity-50 h-50 w-75 h-md-25 w-md-50 align-items-center d-flex justify-content-center">Leaves</div>
               </div>
               <div class="position-relative">
                 <img src="img/slider3.png">
-                <div class="position-absolute top-50 start-50 translate-middle text-white fs-md-3 bg-success bg-dark bg-opacity-50 h-50 w-75 h-md-25 w-md-50 align-items-center d-flex justify-content-center">Prawns</div>
+                <div class="position-absolute top-50 start-50 translate-middle text-white bg-success bg-dark bg-opacity-50 h-50 w-75 h-md-25 w-md-50 align-items-center d-flex justify-content-center">Prawns</div>
               </div>
               <div class="position-relative">
                 <img src="img/slider4.png">
-                <div class="position-absolute top-50 start-50 translate-middle text-white fs-md-3 bg-success bg-dark bg-opacity-50 h-50 w-75 h-md-25 w-md-50 align-items-center d-flex justify-content-center">Lettuce</div>
+                <div class="position-absolute top-50 start-50 translate-middle text-white bg-success bg-dark bg-opacity-50 h-50 w-75 h-md-25 w-md-50 align-items-center d-flex justify-content-center">Lettuce</div>
               </div>
               <div class="position-relative">
                 <img src="img/slider5.png">
-                <div class="position-absolute top-50 start-50 translate-middle text-white fs-md-3 bg-success bg-dark bg-opacity-50 h-50 w-75 h-md-25 w-md-50 align-items-center d-flex justify-content-center">Tomatoes</div>
+                <div class="position-absolute top-50 start-50 translate-middle text-white bg-success bg-dark bg-opacity-50 h-50 w-75 h-md-25 w-md-50 align-items-center d-flex justify-content-center">Tomatoes</div>
               </div>
             </div>
           </div>
